src/objects/DCM_Addr_Good_JSON__mdt.object
<CustomObject>
    <fields>
        <fullName>ADDRESS_ID__c</fullName>
        <label>ADDRESS_ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDRNUMSUFFIX__c</fullName>
        <label>ADDRNUMSUFFIX</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRNUM__c</fullName>
        <label>ADDRNUM</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALIASNAME__c</fullName>
        <label>ALIASNAME</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ANC_2002__c</fullName>
        <label>ANC_2002</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANC_2012__c</fullName>
        <label>ANC_2012</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANC__c</fullName>
        <label>ANC</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CENSUS_TRACT__c</fullName>
        <label>CENSUS_TRACT</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLUSTER__c</fullName>
        <label>CLUSTER_</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfidenceLevel__c</fullName>
        <label>ConfidenceLevel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOCUS_IMPROVEMENT_AREA__c</fullName>
        <label>FOCUS_IMPROVEMENT_AREA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FULLADDRESS__c</fullName>
        <label>FULLADDRESS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAS_ALIAS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>HAS_ALIAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAS_CONDO_UNIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HAS_CONDO_UNIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAS_RES_UNIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HAS_RES_UNIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAS_SSL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HAS_SSL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMAGEDIR__c</fullName>
        <label>IMAGEDIR</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMAGENAME__c</fullName>
        <label>IMAGENAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMAGEURL__c</fullName>
        <label>IMAGEURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LATITUDE__c</fullName>
        <label>LATITUDE</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LONGITUDE__c</fullName>
        <label>LONGITUDE</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NATIONALGRID__c</fullName>
        <label>NATIONALGRID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBHD_ACTION__c</fullName>
        <label>NBHD_ACTION</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLDIST__c</fullName>
        <label>POLDIST</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <label>PSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUADRANT__c</fullName>
        <label>QUADRANT</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RES_TYPE__c</fullName>
        <label>RES_TYPE</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROADWAYSEGID__c</fullName>
        <label>ROADWAYSEGID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROC__c</fullName>
        <label>ROC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMD_2002__c</fullName>
        <label>SMD_2002</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMD_2012__c</fullName>
        <label>SMD_2012</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMD__c</fullName>
        <label>SMD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSL__c</fullName>
        <label>SSL</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>STATE</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STNAME__c</fullName>
        <label>STNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREETVIEWURL__c</fullName>
        <label>STREETVIEWURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>STREET_TYPE__c</fullName>
        <label>STREET_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOTE_PRCNCT__c</fullName>
        <label>VOTE_PRCNCT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARD_2002__c</fullName>
        <label>WARD_2002</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARD_2012__c</fullName>
        <label>WARD_2012</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARD__c</fullName>
        <label>WARD</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XCOORD__c</fullName>
        <label>XCOORD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YCOORD__c</fullName>
        <label>YCOORD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZIPCODE__c</fullName>
        <label>ZIPCODE</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>DCM Addr Good JSON</label>
    <pluralLabel>DCM Addr Good JSON</pluralLabel>
</CustomObject>